--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       .attribution {
-        font-size: 11px;
+        font-size: 15px;
         text-align: center;
-        visibility: hidden;
+        float: right;
+        margin-bottom: 20px;
+        margin-right: 20px;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -68,7 +70,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">The-Bipu</a>.
     </div>
   </body>
 </html>
