--- a/index.html
+++ b/index.html
@@ -9,36 +9,71 @@
   <title>Frontend Mentor | Four card feature section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <link rel="stylesheet" href="./style.css">
+
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; font-size: 1rem; margin-bottom: 2rem;}
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
   
-  Reliable, efficient delivery
-  Powered by Technology
+  <div class="container">
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+    <div class="first-container">
+      <p class="para-1">Reliable, efficient delivery <br> <span>Powered by Technology</span></p>
+      <p class="para-2">Our Artificial Intelligence powered tools use millions of project data points 
+        to ensure that your project is successful</p>
+    </div>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+    <div class="second-container">
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+      <div class="second-container-1">
+        <div class="division first-division">
+          <p class="paraSecond">Supervisor</p>
+          <p class="paraContent">Monitors activity to identify project roadblocks</p>
+          <img src="./images/icon-supervisor.svg" alt="" class="card-logo">
+        </div>
+      </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+      <div class="second-container-2">
+        <div class="division second-division">
+          <p class="paraSecond">Team Builder</p>
+          <p class="paraContent">Scans our talent network to create the optimal team for your project</p>
+          <img src="./images/icon-team-builder.svg" alt="" class="card-logo">
+        </div>
+        <div class="division third-division">
+          <p class="paraSecond">Karma</p>
+          <p class="paraContent">Regularly evaluates our talent to ensure quality</p>
+          <img src="./images/icon-karma.svg" alt="" class="card-logo">
+        </div>
+      </div>
+      
+      <div class="second-container-3">
+        <div class="division fourth-division">
+          <p class="paraSecond">Calculator</p>
+          <p class="paraContent">Uses data from past projects to provide better delivery estimates</p>
+          <img src="./images/icon-calculator.svg" alt="" class="card-logo">
+        </div>
+      </div>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+    </div>
+
+  </div>
+
+  
+
+  
+
+  
+
+  
 
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">The-Bipu</a>.
     </p>
   </footer>
 </body>
