--- a/index.html
+++ b/index.html
@@ -9,27 +9,38 @@
   <title>Frontend Mentor | Profile card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+
+  <link rel="stylesheet" href="./style.css">
+
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution { font-size: 11px; text-align: center; margin-top: 1rem; color: hsl(0, 0%, 100%);}
+    .attribution a { color: hsl(0, 0%, 22%); }
   </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
 
-  80K
-  Followers
+  <div class="container">
 
-  803K
-  Likes
+    <div class="first-container">
+      <img src="./images/bg-pattern-card.svg" alt="background image for the profile picture" class="firstConbg">
+    </div>
+    <div class="second-container">
+      <img src="./images/image-victor.jpg" alt="Profile Picture for the Card" class="secondConp">
+      <p class="name">Victor Crest <span>26</span></p>
+      <p class="place">London</p>
+  
+      <div class="rating">
+        <p class="paraRating"> 80K <br> <span class="ratingSpan">Followers</span> </p>
+        <p class="paraRating"> 803K <br> <span class="ratingSpan">Likes</span> </p>
+        <p class="paraRating"> 1.4K <br> <span class="ratingSpan">Photos</span> </p>
+      </div>
+    </div>
 
-  1.4K
-  Photos
+  </div>
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">The-Bipu</a>.
   </div>
 </body>
 </html>
