--- a/index.html
+++ b/index.html
@@ -60,20 +60,11 @@
     </div>
 
   </div>
-
-  
-
-  
-
-  
-
-  
-
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">The-Bipu</a>.
+      Coded by <a href="https://github.com/the-bipu">The-Bipu</a>.
     </p>
   </footer>
 </body>
