--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; margin-top: 1rem; font-size: 1rem;}
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution { color: hsl(0, 0%, 100%); font-size: 11px; text-align: center; margin-top: 1rem; font-size: 1rem;}
+    .attribution a { color: antiquewhite; }
   </style>
 </head>
 
