--- a/index.html
+++ b/index.html
@@ -8,42 +8,82 @@
   
   <title>Frontend Mentor | Interactive rating component</title>
 
+  <link rel="stylesheet" href="./style.css">
+
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; visibility: hidden;}
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
 
-  <!-- Rating state start -->
+<!-- Rating state start -->
 
-  How did we do?
+<div class="container1">
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+  <div class="con1-div1">
+    <div class="miniBox">
+      <img src="./images/icon-star.svg" alt="">
+    </div>
+  </div>
 
-  1 2 3 4 5
+  <div class="con1-div2">
+    <h2>How did we do?</h2>
+  </div>
 
-  Submit
+  <div class="con1-div3">
+    <p>Please let us know how we did with your support request. All feedback is appreciated 
+      to help us improve our offering!</p>
+  </div>
 
-  <!-- Rating state end -->
+  <div class="con1-div4">
+    <button class="miniBox" value="1">1</button>
+    <button class="miniBox" value="2">2</button>
+    <button class="miniBox" value="3">3</button>
+    <button class="miniBox" value="4">4</button>
+    <button class="miniBox" value="5">5</button>
+  </div>
 
-  <!-- Thank you state start -->
+  <div class="con1-div5">
+    <button type="submit" class="submit_button" id="submit">Submit</button>
+  </div>
 
-  You selected <!-- Add rating here --> out of 5
+</div>
 
-  Thank you!
+<!-- Rating state end -->
 
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
+<!-- Thank you state start -->
 
-  <!-- Thank you state end -->
+<div class="container2">
 
+  <div class="con2-div1">
+    <img src="./images/illustration-thank-you.svg" alt="">
+  </div>
+
+  <div class="con2-div2">
+    You selected <!-- Add rating here --> out of 5
+  </div>
+
+  <div class="con2-div3">
+    Thank you!
+  </div>
+
+  <div class="con2-div4">
+    We appreciate you taking the time to give a rating. If you ever need more support, 
+    don’t hesitate to get in touch!
+  </div>
+
+</div>
+
+<!-- Thank you state end -->
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">The-Bipu</a>.
   </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
