--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="container1">
 
   <div class="con1-div1">
-    <div class="miniBox">
+    <div class="miniBox starBox">
       <img src="./images/icon-star.svg" alt="">
     </div>
   </div>
@@ -38,11 +38,11 @@
   </div>
 
   <div class="con1-div4">
-    <button class="miniBox" value="1">1</button>
-    <button class="miniBox" value="2">2</button>
-    <button class="miniBox" value="3">3</button>
-    <button class="miniBox" value="4">4</button>
-    <button class="miniBox" value="5">5</button>
+    <button class="miniBox box-1" value="1">1</button>
+    <button class="miniBox box-2" value="2">2</button>
+    <button class="miniBox box-3" value="3">3</button>
+    <button class="miniBox box-4" value="4">4</button>
+    <button class="miniBox box-5" value="5">5</button>
   </div>
 
   <div class="con1-div5">
@@ -62,7 +62,9 @@
   </div>
 
   <div class="con2-div2">
-    You selected <!-- Add rating here --> out of 5
+    <div class="con2-div2-1">
+      You selected <div class="con2-para1"> 0 </div> out of 5
+    </div>
   </div>
 
   <div class="con2-div3">
