--- a/index.html
+++ b/index.html
@@ -8,26 +8,36 @@
   
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="./style.css">
+
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+
+    .attribution { 
+      font-size: 11px; 
+      text-align: center; 
+      float: left; 
+      margin-top: 50px; 
+      margin-left: 2rem; 
+      font-size: 0.8rem;
+
+      color: hsl(0, 36%, 70%);
+    }
+
+    .attribution a { 
+      color: hsl(0, 6%, 24%);
+    }
+    
   </style>
 </head>
 <body>
 
-  We're coming soon
+  <div id="root"></div>
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
-
-  Email Address
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  <script src="index.pack.js"></script>
 </body>
 </html>
