--- a/index.html
+++ b/index.html
@@ -9,53 +9,70 @@
   <title>Frontend Mentor | Room homepage</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+
+  <link rel="stylesheet" href="styles.scss">
+  <link rel="stylesheet" href="styles.css">
+
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    
   </style>
 </head>
 <body>
 
+  <div class="main__div-nav">
+    Home
+    Shop
+    About
+    Contact
+  </div>
+
+  <div class="main__div-content">
+    Discover innovative ways to decorate
+
+    We provide unmatched quality, comfort, and style for property owners across the country. 
+    Our experts combine form and function in bringing your vision to life. Create a room in your 
+    own style with our collection and make your property a reflection of you and what you love.
   
-  Home
-  Shop
-  About
-  Contact
+    Shop now
+  </div>
 
-  Discover innovative ways to decorate
+  <div class="main__div-content">
+    We are available all across the globe
 
-  We provide unmatched quality, comfort, and style for property owners across the country. 
-  Our experts combine form and function in bringing your vision to life. Create a room in your 
-  own style with our collection and make your property a reflection of you and what you love.
+    With stores all over the world, it's easy for you to find furniture for your home or place of business. 
+    Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
+    store locator. Any questions? Don't hesitate to contact us today.
 
-  Shop now
+    Shop now
+  </div>
 
-  We are available all across the globe
+  <div class="main__div-content">
+    Manufactured with the best materials
 
-  With stores all over the world, it's easy for you to find furniture for your home or place of business. 
-  Locally, we’re in most major cities throughout the country. Find the branch nearest you using our 
-  store locator. Any questions? Don't hesitate to contact us today.
+    Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
+    to ensure that every product is made as perfect and as consistent as possible. With three decades of 
+    experience in this industry, we understand what customers want for their home and office.
 
-  Shop now
+    Shop now
+  </div>
 
-  Manufactured with the best materials
+  <div class="mini__div-image1"></div>
 
-  Our modern furniture store provide a high level of quality. Our company has invested in advanced technology 
-  to ensure that every product is made as perfect and as consistent as possible. With three decades of 
-  experience in this industry, we understand what customers want for their home and office.
+  <div class="mini__div-content">
+    About our furniture
 
-  Shop now
-
-  About our furniture
-
-  Our multifunctional collection blends design and function to suit your individual taste.
-  Make each room unique, or pick a cohesive theme that best express your interests and what
-  inspires you. Find the furniture pieces you need, from traditional to contemporary styles
-  or anything in between. Product specialists are available to help you create your dream space.
+    Our multifunctional collection blends design and function to suit your individual taste.
+    Make each room unique, or pick a cohesive theme that best express your interests and what
+    inspires you. Find the furniture pieces you need, from traditional to contemporary styles
+    or anything in between. Product specialists are available to help you create your dream space.
+  </div>
+  
+  <div class="mini__div-image2"></div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
 </body>
 </html>
